<resources>
    <string name="app_name">PMV</string>
    <string name="uncalc_val">N/C</string>
    <string name="run1">Coureur 1</string>
    <string name="run2">Coureur 2</string>
    <string name="run3">Coureur 3</string>
    <string name="run4">Coureur 4</string>
    <string name="run5">Coureur 5</string>
    <string name="run6">Coureur 6</string>
    <string name="run7">Coureur 7</string>
    <string name="run8">Coureur 8</string>
    <string name="run9">Coureur 9</string>
    <string name="run10">Coureur 10</string>
    <string name="run11">Coureur 11</string>
    <string name="run12">Coureur 12</string>
    <string name="run13">Coureur 13</string>
    <string name="run14">Coureur 14</string>
    <string name="run15">Coureur 15</string>
    <string name="run16">Coureur 16</string>
    <string name="run17">Coureur 17</string>
    <string name="run18">Coureur 18</string>
    <string name="run19">Coureur 19</string>
    <string name="run20">Coureur 20</string>
    <string name="run21">Coureur 21</string>
    <string name="run22">Coureur 22</string>
    <string name="run23">Coureur 23</string>
    <string name="run24">Coureur 24</string>
    <string name="run25">Coureur 25</string>
    <string name="run26">Coureur 26</string>
    <string name="run27">Coureur 27</string>
    <string name="run28">Coureur 28</string>
    <string name="run29">Coureur 29</string>
    <string name="run30">Coureur 30</string>
    <string name="run31">Coureur 31</string>
    <string name="run32">Coureur 32</string>
    <string name="run33">Coureur 33</string>
    <string name="run34">Coureur 34</string>
    <string name="run35">Coureur 35</string>
    <string name="run36">Coureur 36</string>
    <string name="run37">Coureur 37</string>
    <string name="run38">Coureur 38</string>
    <string name="run39">Coureur 39</string>
    <string name="run40">Coureur 40</string>
    <string name="titleSelect"><u>Sélection</u></string>
    <string name="titleRun1"><u>Couloir 1</u></string>
    <string name="titleRun2"><u>Couloir 2</u></string>
    <string name="titleTime1"><u>Temps 1</u></string>
    <string name="titleTime2"><u>Temps 2</u></string>
    <string name="titleSpeed1"><u>Vitesse 1</u></string>
    <string name="titleSpeed2"><u>Vitesse 2</u></string>
    <string name="titleWind1"><u>Vent 1</u></string>
    <string name="titleWind2"><u>Vent 2</u></string>
    <string name="toastSelect">Session sélectionnée</string>
    <string name="toastPrepare">Préparez-vous !</string>
    <string name="toastAVM">À vos marques !</string>
    <string name="toastReady">Prêt !</string>
    <string name="toastGo">Partez !</string>
    <string name="toastStop">STOP !</string>
    <string name="toastCSV">Exportation du CSV en cours</string>
    <string name="btnSelect">Arrêter la Session</string>
    <string name="btnPrepare">Prép.</string>
    <string name="btnAVM">AVM</string>
    <string name="btnReady">Prêt !</string>
    <string name="btnGo">Go !</string>
    <string name="btnStop">Stop !</string>
    <string name="btnCSV">CSV</string>
    <string name="sessionName">%1$s</string>
    <string name="defaultSessionName">Session Inconnue</string>
    <string name="lineNumber">Course : %1$s</string>
    <string name="titleLoginLogin">Connexion au système PMV</string>
    <string name="titleLoginId">Entrez votre identifiant : </string>
    <string name="titleLoginPasswd">Entrez votre mot de passe :</string>
    <string name="edtLoginId">Identifiant</string>
    <string name="edtLoginPasswd">Mot de passe</string>
    <string name="btnLogin">Se connecter</string>
    <string name="btnControl">Reprendre le contrôle</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alrtbox_endsess_title">Fin de session</string>
    <string name="alrtbox_endsess_msg">La session est terminée. Cliquez sur OK pour quitter l\'application</string>
    <string name="endSession">Session terminée</string>

</resources>