<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFff0000"
    android:elevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnPrep"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:onClick="onBtnPrepare"
            android:text="@string/btnPrepare"
            android:textColor="@color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnAVM"
            app:layout_constraintEnd_toStartOf="@+id/btnAVM"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnAVM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:onClick="onBtnAVM"
            android:text="@string/btnAVM"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/btnReady"
            app:layout_constraintStart_toEndOf="@+id/btnPrep"
            app:layout_constraintTop_toTopOf="@+id/btnReady" />

        <Button
            android:id="@+id/btnReady"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:onClick="onBtnReady"
            android:text="@string/btnReady"
            android:textColor="@color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnGo"
            app:layout_constraintEnd_toStartOf="@+id/btnGo"
            app:layout_constraintStart_toEndOf="@+id/btnAVM" />

        <Button
            android:id="@+id/btnGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="58dp"
            android:onClick="onBtnGo"
            android:text="@string/btnGo"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/space"
            app:layout_constraintStart_toEndOf="@+id/btnReady"
            app:layout_constraintTop_toTopOf="parent"/>

        <Space
            android:id="@+id/space"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="58dp"
            android:layout_marginEnd="58dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/lineTitleNumber"
            app:layout_constraintStart_toEndOf="@+id/btnGo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lineTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/lineNumber"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/space"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lineTitleNumber"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintStart_toEndOf="@id/lineTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.appcompat.widget.Toolbar>